Add StaticPageGenerator for generating HTML pages for films and authors
- Implemented a class to generate individual static HTML pages for films and authors.
- Added methods to load JSON data, slugify titles, and render HTML pages with SEO-friendly metadata.
- Created separate methods for generating film pages, author pages, and index pages.
- Included structured data for SEO and common styles for consistent design.
- Added command-line interface for specifying data and output directories.

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hollywood Adaptations of American Women Writers (1910-1960)</title>
+    <title>Hollywood Regionalism (1910-1961)</title>
     <style>
         :root {
             --primary-color: #1a1a1a;
@@ -275,8 +275,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Hollywood Adaptations of American Women Writers</h1>
-            <p class="subtitle">Film Adaptations Database (1910-1960)</p>
+            <h1>Hollywood Regionalism</h1>
+            <p class="subtitle">Film Adaptations Database (1910-1961)</p>
         </div>
     </header>
 
